tests/invalid/list2.udif
- green chilies
- red chilies
ingredients:
